Avalara Fullqa/src/Sertifi E-Sign for Salesforce.com/objects/ContractContactJunction__c.object
<CustomObject>
    <fields>
        <fullName>Apply_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <description>OnePass checks this flag and call ApplySignature API call on every signer that has the flag set.</description>
        <label>Apply Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <inlineHelpText>Testing help field text</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Signers</relationshipLabel>
        <relationshipName>Signers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_Name__c</fullName>
        <label>Signer Level Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signer_Order__c</fullName>
        <label>Signer Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TestContract__c</fullName>
        <label>Sertifi-EContract</label>
        <referenceTo>TestContract__c</referenceTo>
        <relationshipLabel>Signers</relationshipLabel>
        <relationshipName>Signers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Signer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Signer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Signers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>